# efr32_bootloader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_board_dev.sh  build_board_hatch.sh  build_board_hatch_outdoor.sh  build_board_hatch_outdoor_v2.sh  build_board_ncp.sh  build_board_ncp_module.sh  build_board_ncp_pa.sh  build_board_ncp_v2.sh  build_debug.sh  debug.sh  debug_openocd.sh  jlink_start.sh  jlink_start_swd.sh  openocd_start.sh  program_openocd.sh
bootloader/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  board_dev.h  board_hatch_outdoor_v2.h  board_ncp_v2.h  bootloader.c  bootloader.h  bootloader_config.h  bsp_dev.h  bsp_hatch.h  bsp_hatch_outdoor.h  bsp_ncp.h  bsp_ncp_module.h  command_handler.c  command_handler.h  communication.c  communication.h  crt0.c  dispatcher.c  dispatcher.h  dummy.c  hal-config.h  handle_data.c  handle_instruction.c  header_block.c.in  main.c  program.sh  simgpbr.c  simgpbr.h  syscalls.c  token.h  trcConfig.h  uart_device.c  uart_device.h
cmake/: GetGitRevisionDescription.cmake  compiler.cmake  native.cmake  size.cmake
resources/: bootloader_startup_routine_flowchart.xml
tools/: binary_post_process.py  btle_updater_simple.py  create_ota_package.py  create_zigbee_ota_image.py  py_filter.sh  simeeprom_eraser.py  uart_updater_simple.py
tools/lib/: bootloader.py  crc.py  firmwarepackage.py  firmwareupdater.py  ioserial.py  simpleupdater.py  sip.py  threadsafedict.py  watchdog.py
